--- a/react/package.json
+++ b/react/package.json
@@ -12,15 +12,20 @@
     "@babel/plugin-transform-proto-to-assign": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/register": "^7.12.1",
+    "Faker": "^0.7.2",
     "babel-loader": "8.1.0",
     "babel-preset-react-app": "10.0.0",
+    "classnames": "^2.2.6",
     "compression": "^1.7.4",
     "concurrently": "^5.3.0",
+    "css-loader": "^5.0.1",
     "date-fns": "^2.16.1",
     "excerpts": "^0.0.3",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "4.5.0",
     "marked": "^1.2.5",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
     "react": "0.0.0-experimental-3310209d0",
@@ -32,18 +37,17 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-server-dom-webpack": "0.0.0-experimental-3310209d0",
-    "resolve": "1.12.0",
-    "rimraf": "^3.0.2",
-    "sanitize-html": "^2.2.0",
-    "webpack": "4.44.2",
-    "webpack-cli": "^4.2.0",
-    "Faker": "^0.7.2",
-    "classnames": "^2.2.6",
-    "moment": "^2.29.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-persist": "^6.0.0",
-    "sass": "^1.32.2"
+    "resolve": "1.12.0",
+    "rimraf": "^3.0.2",
+    "sanitize-html": "^2.2.0",
+    "sass": "^1.32.2",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "webpack": "4.44.2",
+    "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
