--- a/react/package.json
+++ b/react/package.json
@@ -30,6 +30,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "4.5.0",
     "marked": "^1.2.5",
+    "mini-css-extract-plugin": "^1.3.3",
     "moment": "^2.29.1",
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
