fix switch and route

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,7 @@
 #### Developmet stage ####
 FROM node:14.5.0-alpine3.11
 
-WORKDIR /usr/app
+WORKDIR /opt/contact-book-app
 
 COPY package.json yarn.lock ./
 RUN yarn install
@@ -9,4 +9,5 @@ RUN yarn install
 COPY tsconfig.json tsconfig.build.json .eslintrc.js nest-cli.json .prettierrc ./
 COPY src ./src
 
-RUN yarn build
+ENTRYPOINT [ "yarn", "run" ]
+CMD [ "start:dev" ]
