--- a/react/package.json
+++ b/react/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
     "react": "0.0.0-experimental-3310209d0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "0.0.0-experimental-3310209d0",
     "react-error-boundary": "^3.1.0",
     "react-fetch": "0.0.0-experimental-3310209d0",
